src/test/ui/regions/regions-infer-invariance-due-to-decl.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-infer-invariance-due-to-decl.rs:22:5
   |
LL | fn to_longer_lifetime<'r>(b_isize: invariant<'r>) -> invariant<'static> {
   |                       -- lifetime `'r` defined here
LL |     b_isize //~ ERROR mismatched types
   |     ^^^^^^^ returning this value requires that `'r` must outlive `'static`

error: aborting due to previous error

